tests/fixtures/invalid/pow_str_bool_dict.py
# Cannot call pow() with Str, Bool, Dict[str, int]
x = pow("hello", True, {"a": 1})
